[package]
name = "biscuit-php"
version = "0.4.0"
edition = "2024"
license = "Apache-2.0"
description = "PHP wrapper for Biscuit authorization tokens"
authors = ["Pierre Tondereau <pierre.tondereau@protonmail.com>"]

[dependencies]
ext-php-rs = "0.15.12"
biscuit-auth = { version = "6.0.0", features = ["pem"] }
hex = "0.4"

[lib]
name = "biscuit_php"
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
