[package]
name = "biscuit_php"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "PHP wrapper for Biscuit authorization tokens"
authors = ["Pierre Tondereau <pierre.tondereau@protonmail.com>"]

[dependencies]
ext-php-rs = "0.15.13"
biscuit-auth = { version = "6.0.0", features = ["pem"] }
biscuit-parser = "0.2.0"
hex = "0.4"
thiserror = "2"

[lib]
name = "biscuit_php"
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
